Second workable commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <!-- Miscellaneous -->
     <string name="database_name">TinruDatabase.db</string>
     <string name="okhttp_cache_name">okhttp_cache</string>
+    <string name="home_progressbar_text_msg">Loading.. This may take a while</string>
     <!-- add here for new type -->
 
     <string name="home_activity_layout_search_button_text">Where do you want to go?</string>
@@ -19,8 +20,10 @@
     <string name="home_activity_layout_nearby_bar">Bar</string>
     <string name="home_activity_layout_nearby_atm">ATM</string>
     <string name="home_activity_layout_nearby_shopping">Shopping</string>
-    <string name="home_activity_layout_nearby_petrol_pump">Petrol</string>
-    
+    <string name="home_activity_layout_nearby_petrol_pump">Gas Station</string>
+
+    <string name="google_place_api_path"></string>
+
     <string name="google_places_api_nearby_type_restaurant">restaurant</string>
     <string name="google_places_api_nearby_type_cafe">cafe</string>
     <string name="google_places_api_nearby_type_bar">bar</string>
