Add signing configuration for release

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">myapp</string>
+    <string name="app_name">tinru</string>
 
     <!-- Shared Preference related string values -->
     <string name="preference_file_key">com.debdroid.tinru.PREFERENCE_FILE_KEY</string>
